# openvino-test

./: README.md
iotedgeOpenVINO/: CMakeLists.txt  CMakeLists.txt.org  Dockerfile.amd64  build_samples.sh  deployment.template.json  run_sample.sh
iotedgeOpenVINO/modules/SampleModule/: CMakeLists.txt  main.cpp  module.json
iotedgeOpenVINO/modules/interactive_face_detection_sample/: CMakeLists.txt  main.cpp  sample.h
iotedgeOpenVINO/modules/testC/: CMakeLists.txt  main.cpp  module.json
